--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,6 @@
 </head>
 <body>
   {% include 'nav-bar.html' %}
-    <h1>Hello World</h1>
-    <h2>Hello, {{first_name}}! How are you?</h2>
+    <h1>Hello from About Page</h1>
 </body>
 </html>
