--- a/templates/form-page.html
+++ b/templates/form-page.html
@@ -9,7 +9,7 @@
   {% include 'nav-bar.html' %}
     <h1>Hello from Form Page</h1>
     <h2>Please fill out the form below:</h2>
-    <form>
+    <form action="/create-account" method="post">
       <input type="text" name="first_name" placeholder="First Name" required placeholder="Enter your first name">
       <input type="text" name="last_name" placeholder="Last Name" required placeholder="Enter your last name">
       <input type="submit" value="Enter">
